--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ branches:
   only:
   - master
 install:
-- pip install pelican==3.6.3
-- pip install ghp-import==0.4.1
+- pip install -r requirements.txt
 script:
 - make publish github
